service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-app
  namespace: raghad-capstone
  labels:
    app: capstone-app
spec:
  selector:
    app: capstone-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
